--- a/res/layout/activity_statistic.xml
+++ b/res/layout/activity_statistic.xml
@@ -22,7 +22,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
                 android:paddingLeft="@dimen/view_padding"
                 android:text=""
@@ -34,7 +33,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
                 android:paddingLeft="@dimen/view_padding"
                 android:text="@string/menstrualCycleLength"
@@ -48,7 +46,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
                 android:paddingLeft="@dimen/view_padding"
                 android:text="@string/bleedingLength"
@@ -60,7 +57,8 @@
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:clickable="true" >
 
             <TextView
                 android:id="@+id/rowAvgValue"
@@ -68,7 +66,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
                 android:paddingLeft="@dimen/view_padding"
                 android:text="@string/avgValue"
@@ -82,7 +79,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
 
@@ -92,7 +88,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
         </TableRow>
@@ -100,7 +95,8 @@
         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:clickable="true" >
 
             <TextView
                 android:id="@+id/rowMinValue"
@@ -108,7 +104,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
                 android:paddingLeft="@dimen/view_padding"
                 android:text="@string/minValue"
@@ -122,7 +117,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
 
@@ -132,7 +126,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
         </TableRow>
@@ -140,7 +133,8 @@
         <TableRow
             android:id="@+id/tableRow4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:clickable="true" >
 
             <TextView
                 android:id="@+id/rowMaxValue"
@@ -148,7 +142,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
                 android:paddingLeft="@dimen/view_padding"
                 android:text="@string/maxValue"
@@ -162,7 +155,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
 
@@ -172,7 +164,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
         </TableRow>
@@ -188,7 +179,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="left|center_horizontal"
                 android:paddingLeft="@dimen/view_padding"
                 android:text="@string/firstDayOfCycle"
@@ -201,7 +191,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
 
@@ -210,7 +199,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/cell_shape"
                 android:gravity="center"
                 android:text="" />
         </TableRow>
