--- a/res/layout/table_row_statistic.xml
+++ b/res/layout/table_row_statistic.xml
@@ -2,7 +2,8 @@
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tableRow"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:clickable="true" >
 
     <TextView
         android:id="@+id/column1"
@@ -10,7 +11,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@drawable/cell_shape"
         android:gravity="center"
         android:text="@string/avgValue"
         android:textSize="12sp"
@@ -23,7 +23,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@drawable/cell_shape"
         android:gravity="center"
         android:text="" />
 
@@ -33,7 +32,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:background="@drawable/cell_shape"
         android:gravity="center"
         android:text="" />
 
