--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/widget_margin"
-    android:background="@drawable/widget_bg" >
+    android:background="@drawable/bg_widget" >
 
     <TextView
         android:id="@+id/widgetTextView"
