--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -62,14 +62,14 @@
         <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_dark</item>
-        <item name="note_bg">@drawable/note_bg_src_dark</item>
-        <item name="one_drop_bg">@drawable/one_drop_bg_src_dark</item>
-        <item name="two_drops_bg">@drawable/two_drops_bg_src_dark</item>
-        <item name="three_drops_bg">@drawable/three_drops_bg_src_dark</item>
-        <item name="sex_bg">@drawable/sex_bg_src_dark</item>
-        <item name="protected_sex_bg">@drawable/protected_sex_bg_src_dark</item>
-        <item name="unprotected_sex_bg">@drawable/unprotected_sex_bg_src_dark</item>
-        <item name="took_pill_bg">@drawable/pill_bg_src_dark</item>
+        <item name="note_bg">@drawable/bg_note_dark</item>
+        <item name="one_drop_bg">@drawable/bg_one_drop_dark</item>
+        <item name="two_drops_bg">@drawable/bg_two_drops_dark</item>
+        <item name="three_drops_bg">@drawable/bg_three_drops_dark</item>
+        <item name="sex_bg">@drawable/bg_sex_dark</item>
+        <item name="protected_sex_bg">@drawable/bg_protected_sex_dark</item>
+        <item name="unprotected_sex_bg">@drawable/bg_unprotected_sex_dark</item>
+        <item name="took_pill_bg">@drawable/bg_pill_dark</item>
         <item name="sex">@drawable/sex_dark</item>
         <item name="protected_sex">@drawable/sex_protected_dark</item>
         <item name="unprotected_sex">@drawable/sex_unprotected_dark</item>
@@ -79,14 +79,14 @@
         <item name="nextItemIcon">@drawable/ic_next_item_light</item>
         <item name="prevItemIcon">@drawable/ic_previous_item_light</item>
         <item name="goToTodayIcon">@drawable/ic_go_to_today_light</item>
-        <item name="note_bg">@drawable/note_bg_src_light</item>
-        <item name="one_drop_bg">@drawable/one_drop_bg_src_light</item>
-        <item name="two_drops_bg">@drawable/two_drops_bg_src_light</item>
-        <item name="three_drops_bg">@drawable/three_drops_bg_src_light</item>
-        <item name="sex_bg">@drawable/sex_bg_src_light</item>
-        <item name="protected_sex_bg">@drawable/protected_sex_bg_src_light</item>
-        <item name="unprotected_sex_bg">@drawable/unprotected_sex_bg_src_light</item>
-        <item name="took_pill_bg">@drawable/pill_bg_src_light</item>
+        <item name="note_bg">@drawable/bg_note_light</item>
+        <item name="one_drop_bg">@drawable/bg_one_drop_light</item>
+        <item name="two_drops_bg">@drawable/bg_two_drops_light</item>
+        <item name="three_drops_bg">@drawable/bg_three_drops_light</item>
+        <item name="sex_bg">@drawable/bg_sex_light</item>
+        <item name="protected_sex_bg">@drawable/bg_protected_sex_light</item>
+        <item name="unprotected_sex_bg">@drawable/bg_unprotected_sex_light</item>
+        <item name="took_pill_bg">@drawable/bg_pill_light</item>
         <item name="sex">@drawable/sex_light</item>
         <item name="protected_sex">@drawable/sex_protected_light</item>
         <item name="unprotected_sex">@drawable/sex_unprotected_light</item>
